--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
         "removeComments": true,
         "preserveConstEnums": true,
         // "outFile": "../../built/local/tsc.js",
-        "outDir": "build/",
-        "sourceMap": true
+        "outDir": "dist/",
+        "sourceMap": true,
+        "declaration": true,
     },
     "include": [
         "src/**/*"
