--- a/package.json
+++ b/package.json
@@ -1,13 +1,42 @@
 {
-  "devDependencies": {
-    "@types/chai": "^4.1.6",
-    "@types/mocha": "^5.2.5",
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.1.1"
-  },
-  "scripts": {
-    "test": "mocha --reporter spec --compilers ts:ts-node/register 'src/**/*.spec.ts'"
-  }
+    "name": "exchange-macthing-engine",
+    "version": "1.0.2",
+    "description": "A Light Weight Matching Engine for Stock Exchange",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "bugs": {
+        "url": "https://github.com/devashishpuri/ExchangeMatchingEngine/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/devashishpuri/ExchangeMatchingEngine.git"
+    },
+    "keywords": [
+        "matching",
+        "engine",
+        "exchange",
+        "market",
+        "limit",
+        "order",
+        "trade"
+    ],
+    "author": "Devashish Puri",
+    "license": "MIT",
+    "files": [
+        "dist/index.js",
+        "dist/index.d.ts"
+    ],
+    "devDependencies": {
+        "@types/chai": "^4.1.6",
+        "@types/mocha": "^5.2.5",
+        "chai": "^4.2.0",
+        "mocha": "^5.2.0",
+        "ts-node": "^7.0.1",
+        "typescript": "^3.1.1"
+    },
+    "scripts": {
+        "prepublish": "npm run build",
+        "build": "tsc",
+        "test": "mocha --reporter spec --compilers ts:ts-node/register 'test/**/*.spec.ts'"
+    }
 }
